[gd_scene load_steps=20 format=3 uid="uid://chmwbafs6r60"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_oqhaq"]
[ext_resource type="Texture2D" uid="uid://dhwxydkih42re" path="res://assets/sprites/dangling_leg2.png" id="2_30346"]
[ext_resource type="Texture2D" uid="uid://c1qm80pd7ytie" path="res://assets/sprites/scubahood_torso_prototype.png" id="2_jtvf2"]
[ext_resource type="Texture2D" uid="uid://b6l0xokc70vqp" path="res://assets/sprites/rippedwalkcycle.png" id="3_4iljy"]
[ext_resource type="Texture2D" uid="uid://bjn5hoqjdvqwy" path="res://assets/sprites/scubahood_legs_prototype.png" id="3_klicx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_secrw"]
atlas = ExtResource("3_4iljy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm1g6"]
atlas = ExtResource("3_4iljy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ymui"]
atlas = ExtResource("3_4iljy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaf0c"]
atlas = ExtResource("3_4iljy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7f5g"]
atlas = ExtResource("3_4iljy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbhbe"]
atlas = ExtResource("3_4iljy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ylb"]
atlas = ExtResource("3_4iljy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxxg5"]
atlas = ExtResource("3_4iljy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxt5b"]
atlas = ExtResource("3_4iljy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwgw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_30346")
}],
"loop": true,
"name": &"freefall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_klicx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_secrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm1g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ymui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaf0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7f5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbhbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ylb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxxg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxt5b")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_vbhm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jtvf2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e5dpl"]
radius = 17.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3g0k1"]
radius = 7.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qwv10"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_oqhaq")

[node name="LowerBodySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -8)
scale = Vector2(0.764648, 0.764648)
sprite_frames = SubResource("SpriteFrames_pwgw1")
animation = &"freefall"

[node name="UpperBody" type="Node2D" parent="."]

[node name="UpperBodySprite" type="AnimatedSprite2D" parent="UpperBody"]
position = Vector2(2, -11)
scale = Vector2(0.773438, 0.773438)
sprite_frames = SubResource("SpriteFrames_vbhm7")

[node name="SignifierRayCast" type="RayCast2D" parent="UpperBody"]
scale = Vector2(1.00146, 1)
target_position = Vector2(118.827, 0)
collision_mask = 2
hit_from_inside = true

[node name="Muzzle" type="Marker2D" parent="UpperBody"]
position = Vector2(23, 2)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UpperBodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(2, -10)
shape = SubResource("CapsuleShape2D_e5dpl")

[node name="LowerBodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(2, 9)
rotation = -1.57066
shape = SubResource("CapsuleShape2D_3g0k1")

[node name="FlipSide1" type="Area2D" parent="."]
position = Vector2(0, -70)
collision_layer = 2
collision_mask = 2

[node name="FlipSide1Inside" type="CollisionShape2D" parent="FlipSide1"]
shape = SubResource("CircleShape2D_qwv10")

[node name="FlipSide2" type="Area2D" parent="."]
position = Vector2(0, -70)
collision_layer = 2
collision_mask = 2

[node name="FlipSide2Inside" type="CollisionShape2D" parent="FlipSide2"]
position = Vector2(0, 114)
shape = SubResource("CircleShape2D_qwv10")
